--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="left">
         <div class="editor" contenteditable="">
-            Code kottu thamudu...
+            Enter Your Code...
         </div>
             </div>
             <div class="bar" title="Click and Drag"></div>
